# QuickSnapAudio

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  generate_icons.py  installer.nsi
.github/: dependabot.yml
.github/workflows/: pages.yml  release.yml
docs/: index.html
resources/: app.manifest  app.rc  quicksnapaudio.desktop  resources.qrc
src/: audiodevicemanager.cpp  audiodevicemanager.h  autostartmanager.cpp  autostartmanager.h  bluetoothmanager.cpp  bluetoothmanager.h  configmanager.cpp  configmanager.h  deviceentry.cpp  deviceentry.h  hotkeymanager.cpp  hotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  notificationpopup.cpp  notificationpopup.h  thememanager.cpp  thememanager.h  trayicon.cpp  trayicon.h  updatechecker.cpp  updatechecker.h
src/platform/: linux_audio.cpp  linux_audio.h  linux_bluetooth.cpp  linux_bluetooth.h  linux_hotkey.cpp  linux_hotkey.h  windows_audio.cpp  windows_audio.h  windows_bluetooth.cpp  windows_bluetooth.h  windows_hotkey.cpp  windows_hotkey.h
